--- a/RAG/RAG评测.ipynb
+++ b/RAG/RAG评测.ipynb
@@ -125,13 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-08-16T15:17:43.680173Z",
+     "start_time": "2025-08-16T15:17:43.675430Z"
+    }
    },
+   "source": "print('ok')",
    "outputs": [],
-   "source": ""
+   "execution_count": null
   },
   {
    "metadata": {},
